--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>
           Don't just be a part of the future, be a part of building it! Laing O'Rourke is an end-to-end engineering
           enterprise with a wealth of careers, development and progression opportunities. What could the future could
-          hold for you?
+          hold for you? Take the quiz to find out:
         </p>
       </div>
 
